# InstaLilly-Hackathon

./: .gitignore  CLAUDE.md  DOCUMENT.md  PRESENTATION.md  README.md  demo.py  demo_full.py  demo_vm.py  download_data.py  plan.md  pyproject.toml  requirements.txt  sync_to_vm.sh  test_api.py
agentic_system/: __init__.py  actions.py  agent.py  pipeline.py  router.py
api/: __init__.py  copilot_server.py  detection_server.py
models/distraction_detector/: prepare_data.py  train.py
models/drowsiness_detector/: prepare_data.py  train.py
models/pedestrian_detector/: download_samples.py  extract_video_frames.py  finetune_binary.py  inference.py  prepare_data.py  run_baseline.py  run_baseline_100.py  run_baseline_v2.py  train.py
models/voice_assistant/: assistant.py  test_audio.py
presentation/demo_scripts/: demo_flow.md
presentation/metrics/: metrics_template.md  summary_dashboard.md
scripts/: setup_vm.sh
