[project]
name = "vehicle-copilot"
version = "0.1.0"
description = "In-Vehicle AI Copilot - Multi-Modal On-Device Safety System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",

    # Data handling
    "datasets>=2.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",

    # UI
    "gradio>=4.20.0",

    # Evaluation
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",

    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Audio (voice assistant)
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
gcp = [
    "google-cloud-aiplatform>=1.45.0",
    "google-cloud-storage>=2.14.0",
]
aws = [
    "boto3>=1.34.0",
    "sagemaker>=2.200.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
